# rust-quantifier-elimination

./: Cargo.toml
.github/workflows/: rust.yml
src/: formula.pest  lib.rs  main.rs  parser.rs  syntax.rs
